publish-assets step was missing
git-svn-id: http://svn.apostrophenow.org/plugins/apostropheCkEditorPlugin/trunk@4323 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/README
+++ b/README
@@ -9,7 +9,8 @@ KNOWN PROBLEMS
 INSTALLATION
 
 * Add this plugin and enable it in ProjectConfiguration.class.php
-* Set app_a_editor to ck
+* Set app_a_editor to ck in app.yml
+* symfony plugin:publish-assets
 * symfony cc
 
 Boom! ckeditor replaces fckeditor in rich text slots. And everywhere else
