Point to nicer documentation in Wiki
git-svn-id: http://svn.apostrophenow.org/plugins/apostropheCkEditorPlugin/trunk@4412 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/README
+++ b/README
@@ -1,67 +1,6 @@
-This plugin has matured to the point where we use it on our own client projects.
+# Apostrophe
 
-KNOWN PROBLEMS
+Welcome to Apostrophe! 
 
-* We fixed a bug with percentage widths and the kama skin in our own version, "aDefault," so that's the default skin you get. Not really a problem, just something to be aware of
-* I have not made a spellchecker available because ckeditor's spellchecker is an ad-supported product from spellcheck.net, probably not something our clients want. Maybe this will mature: http://cksource.com/forums/viewtopic.php?f=11&t=15893
-
-INSTALLATION
-
-* Add this plugin and enable it in ProjectConfiguration.class.php
-* Set app_a_editor to ck in app.yml
-* symfony plugin:publish-assets
-* symfony cc
-
-CUSTOMIZING CK EDITOR TOOLBARS
-
-Instead of using ckextraconfig.js in the project's JS folder, you can simply set your toolbars in app.yml.
-We prefer this syntax because it resembles the JS syntax.
-
-a:
-  ckEditor_toolbars:
-    Default:
-      - ['Format']
-      - ['Bold','Italic']
-      - ['Outdent','Indent','Blockquote']
-      - ['OrderedList','UnorderedList']
-      - ['-','Link','Unlink','Anchor','-','Table']
-      - ['FitWindow','Source']
-    Main:
-      - ['Format']
-      - ['Bold','Italic']
-      - ['Outdent','Indent','Blockquote']
-      - ['OrderedList','UnorderedList']
-      - ['-','Link','Unlink','Anchor','-','Table']
-      - ['FitWindow','Source']
-    Sidebar:
-      - ['Format']
-      - ['Bold','Italic']
-      - ['Outdent','Indent','Blockquote']
-      - ['OrderedList','UnorderedList']
-      - ['Link','Unlink','Anchor']
-      - ['Table']
-      - ['FitWindow','Source']
-    Media: 
-      - ['Bold','Italic']
-      - ['Outdent','Indent','Blockquote']
-      - ['Link','Unlink','Anchor']
-      - ['Source']
-
-
-Boom! ckeditor replaces fckeditor in rich text slots. And everywhere else
-in Apostrophe.
-
-You can have a ckextraconfig.js (like fckextraconfig.js) but you probably won't 
-need one if all you want to do is override the toolbars, because you can do that
-in app.yml. See aCkEditor.class.php for the default settings which you'll need
-to convert to YAML to keep the existing toolbars if you choose to override this.
-
-Feedback & patches welcome. Please raise issues (and throw roses) in the apostrophenow Google Group:
-
-https://groups.google.com/d/forum/apostrophenow
-
-And via trac:
-
-http://trac.apostrophenow.org/
-
-- The P'unk Avenue crew
+For complete and extensive documentation of Apostrophe please visit
+[trac.apostrophenow.org](http://trac.apostrophenow.org/wiki/ManualOverview). There you'll find a complete manual organized much more conveniently than is possible with a README file. Also see [documentation of this specific plugin](http://trac.apostrophenow.org/wiki/apostropheCkEditorPlugin).
